...
      />
    </View>
  ) : null;

  return (
    <SectionList
      testID="users-list"
      sections={sections}
      renderItem={renderItem}
      renderSectionHeader={renderSectionHeader}
      keyExtractor={keyExtractor}
      stickySectionHeadersEnabled
      ListFooterComponent={listFooter}
...
